--- a/03_Second_Stage/Generate database/1.pca/03_02_process_dim_by_pca.Rmd
+++ b/03_Second_Stage/Generate database/1.pca/03_02_process_dim_by_pca.Rmd
@@ -60,11 +60,12 @@ social.dets  <- readRDS(file.path(input,"vulnr_df_prov.rds"))         %>%
                 # Education and demographic dimension
                 # Dimensión económica con variables estandarizadas
                 ) %>% 
-                mutate( education_dim     = as.numeric(scale.default(pr_edu_inf_25)),
-                        demographics_dim  = as.numeric(scale.default(pr_no_bl_mz)),
-                        economic_dim_3    = as.numeric(scale.default(pr_insu)),
-                        economic_dim_4    = as.numeric(scale.default(pr_pov_2018)),
-                        economic_dim_5    = as.numeric(scale.default(pr_NBI))
+                mutate( education_dim                = as.numeric(scale.default(pr_edu_inf_25)),
+                        demographics_dim             = as.numeric(scale.default(pr_no_bl_mz)),
+                        economic_dim_3               = as.numeric(scale.default(pr_insu)),
+                        health_system_status_dim_10  = as.numeric(scale.default(pr_insu)),
+                        economic_dim_4               = as.numeric(scale.default(pr_pov_2018)),
+                        economic_dim_5               = as.numeric(scale.default(pr_NBI))
                 ) %>% 
                 left_join(readRDS(file.path(main,"geo_measure.rds"))    %>% dplyr::rename(dep = reg), by = c("dep" = "dep", "prov" = "prov") ) %>% 
                 left_join(readRDS(file.path(main,"economics_2017.rds")) %>% dplyr::rename(dep = reg), by = c("dep" = "dep", "prov" = "prov", "ubigeo" = "ubigeo"))
@@ -79,13 +80,13 @@ social.dets.dep <- readRDS(file.path(input,"social_dets_dep.rds"))              
                         Enfermeras_10khab,Farmaceuticos_10khab,
                         TecMedicos_10khab,
                         Medicos_10khab,Presupuesto_salud,Presupuesto_publico, 
-                        Pob_T_Int, Prop_vuelos_entrantes, PBI_per_capita, Prop_neu, MMR, Muertes_materna, mortalidad_prop_cancer )     %>% 
+                        Pob_T_Int, Prop_vuelos_entrantes, PBI_per_capita, Prop_neu, MMR, Muertes_materna, mortalidad_prop_cancer, prop_camas_hosp_disponible, prop_uci_cama_disponible, prop_ventiladores_uci_disponible)   %>% 
             dplyr::rename(pr_diab               = Endes_Prop_Diab,
                           pr_smoke              = Endes_Prop_Fuma_Diario,
                           pr_hyper_tension      = Endes_Prop_HA,
                           pr_obes               = ENDES_prop_Obes,
                           pr_tos                = Endes_Prop_Tos,
-                          med_x_100             = Medicos_10khab)                   %>% 
+                          med_x_100             = Medicos_10khab) %>% 
                    mutate(med_x_100             = med_x_100/10,  
                           enf_x_100             = Enfermeras_10khab/10,
                           far_x_100             = Farmaceuticos_10khab/10,
@@ -105,12 +106,17 @@ social.dets.dep <- readRDS(file.path(input,"social_dets_dep.rds"))              
                         health_system_status_dim_3      = as.numeric(scale.default(med_x_100)),
                         health_system_status_dim_4      = as.numeric(scale.default(enf_x_100)),
                         health_system_status_dim_5      = as.numeric(scale.default(far_x_100)),
-                        health_system_status_dim_6      = as.numeric(scale.default(pr_salud_presupuesto))
+                        health_system_status_dim_6      = as.numeric(scale.default(pr_salud_presupuesto)),
+                        health_system_status_dim_7      = as.numeric(scale.default(prop_camas_hosp_disponible)),                                                                     
+                        health_system_status_dim_8      = as.numeric(scale.default(prop_uci_cama_disponible)),
+                        health_system_status_dim_9      = as.numeric(scale.default(prop_ventiladores_uci_disponible))                                                                     
                         )
 
 ####################################################
 
 ```
+
+
 
 
 # 4. Principal components analysis
@@ -216,6 +222,53 @@ health.system.status.pca_2           <- prcomp(social.dets.dep %>%
                                         select(med_x_100, enf_x_100,
                                                pr_salud_presupuesto), center = TRUE,scale. = TRUE)
 
+health.system.status.pca_11           <- prcomp(social.dets.dep %>% 
+                                        select(prop_camas_hosp_disponible, prop_uci_cama_disponible,
+                                               prop_ventiladores_uci_disponible), center = TRUE,scale. = TRUE)
+
+health.system.status.pca_12           <- prcomp(social.dets.dep %>% 
+                                        select(prop_camas_hosp_disponible, 
+                                               prop_uci_cama_disponible), center = TRUE,scale. = TRUE)
+
+health.system.status.pca_13           <- prcomp(social.dets.dep %>% 
+                                        select(prop_camas_hosp_disponible, 
+                                               prop_ventiladores_uci_disponible), center = TRUE,scale. = TRUE)
+
+health.system.status.pca_14           <- prcomp(social.dets.dep %>% 
+                                        select(prop_uci_cama_disponible,
+                                               prop_ventiladores_uci_disponible), center = TRUE,scale. = TRUE)
+
+health.system.status.pca_15           <- prcomp(social.dets.dep %>% 
+                                        select(med_x_100,
+                                               enf_x_100), center = TRUE,scale. = TRUE)
+
+health.system.status.pca_16           <- prcomp(social.dets.dep %>% 
+                                        select(med_x_100,
+                                               far_x_100), center = TRUE,scale. = TRUE)
+
+health.system.status.pca_17           <- prcomp(social.dets.dep %>% 
+                                        select(enf_x_100,
+                                               far_x_100), center = TRUE,scale. = TRUE)
+
+health.system.status.pca_18           <- prcomp(  
+                                        left_join( social.dets     %>% select(dep, prov, pr_insu),
+                                                   social.dets.dep %>% select(dep, med_x_100), by = c("dep" = "dep") ) %>% select(-c(dep, prov)),
+                                        center = TRUE, scale. = TRUE)
+
+health.system.status.pca_19           <- prcomp(  
+                                        left_join( social.dets     %>% select(dep, prov, pr_insu),
+                                                   social.dets.dep %>% select(dep, enf_x_100), by = c("dep" = "dep") ) %>% select(-c(dep, prov)),
+                                        center = TRUE, scale. = TRUE)
+
+health.system.status.pca_20           <- prcomp(  
+                                        left_join( social.dets     %>% select(dep, prov, pr_insu),
+                                                   social.dets.dep %>% select(dep, far_x_100), by = c("dep" = "dep") ) %>% select(-c(dep, prov)),
+                                        center = TRUE, scale. = TRUE)
+
+health.system.status.pca_21           <- prcomp(  
+                                        left_join( social.dets     %>% select(dep, prov, pr_insu),
+                                                   social.dets.dep %>% select(dep, pr_salud_presupuesto), by = c("dep" = "dep") ) %>% select(-c(dep, prov)),
+                                        center = TRUE, scale. = TRUE)
 
 geographic.pca_1                    <- prcomp(social.dets     %>% 
                                        select(distance_qapac, distance_port, distance_airpot), center = TRUE,scale. = TRUE)
@@ -324,7 +377,6 @@ grid.arrange(PVEplot, cumPVE, ncol = 2)
 
 
 
-
 # 6. Selection variables
 
 ```{r,message=F,warning=F}
@@ -360,6 +412,18 @@ summary(health.pop.status.pca_21)
 
 summary(health.system.status.pca_1)
 summary(health.system.status.pca_2)
+summary(health.system.status.pca_11)
+summary(health.system.status.pca_12)
+summary(health.system.status.pca_13)
+summary(health.system.status.pca_14)
+summary(health.system.status.pca_15)
+summary(health.system.status.pca_16)
+summary(health.system.status.pca_17)
+summary(health.system.status.pca_18)
+summary(health.system.status.pca_19)
+summary(health.system.status.pca_20)
+summary(health.system.status.pca_21)
+
 summary(geographic.pca_1)
 summary(geographic.pca_2)
 summary(geographic.pca_3)
@@ -577,6 +641,62 @@ health_system_status_dim_2      <-  health.system.status.pca_2$x %>%
                                     dplyr::rename(health_system_status_dim_2 = PC1)
 
 
+health_system_status_dim_11      <-  health.system.status.pca_11$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_11 = PC1)
+
+health_system_status_dim_12      <-  health.system.status.pca_12$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_12 = PC1)
+
+health_system_status_dim_13      <-  health.system.status.pca_13$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_13 = PC1)
+
+health_system_status_dim_14      <-  health.system.status.pca_14$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_14 = PC1)
+
+health_system_status_dim_15      <-  health.system.status.pca_15$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_15 = PC1)
+
+health_system_status_dim_16      <-  health.system.status.pca_16$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_16 = PC1)
+
+health_system_status_dim_17      <-  health.system.status.pca_17$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_17 = PC1)
+
+health_system_status_dim_18      <-  health.system.status.pca_18$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_18 = PC1)
+
+health_system_status_dim_19      <-  health.system.status.pca_19$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_19 = PC1)
+
+health_system_status_dim_20      <-  health.system.status.pca_20$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_20 = PC1)
+
+health_system_status_dim_21      <-  health.system.status.pca_21$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_system_status_dim_21 = PC1)
+
+
 geographic_dim_1                <-  geographic.pca_1$x %>% 
                                     as.data.frame() %>% 
                                     select(PC1) %>% 
@@ -600,14 +720,17 @@ geographic_dim_4                <-  geographic.pca_4$x %>%
 
 social.dets.pca <- left_join( cbind(social.dets, dynamic_population_dim_1, dynamic_population_dim_2, dynamic_population_dim_3, economic_dim_1, economic_dim_2, economic_dim_6,
                                     economic_dim_7, economic_dim_8, economic_dim_9, economic_dim_10, house_charact_dim_1, house_charact_dim_2, 
-                                    geographic_dim_1, geographic_dim_2, geographic_dim_3, geographic_dim_4) ,
+                                    geographic_dim_1, geographic_dim_2, geographic_dim_3, geographic_dim_4, 
+                                    health_system_status_dim_18, health_system_status_dim_19, health_system_status_dim_20, health_system_status_dim_21) ,
                               cbind(health_population_status_dim_1,health_population_status_dim_2, health_population_status_dim_6, health_population_status_dim_7, 
                                     health_population_status_dim_8, health_population_status_dim_9,  health_population_status_dim_15,  health_population_status_dim_16,
                                     health_population_status_dim_17,  health_population_status_dim_18,  health_population_status_dim_19,  health_population_status_dim_20,  health_population_status_dim_21,
-                                    health_system_status_dim_1, health_system_status_dim_2, 
+                                    health_system_status_dim_1, health_system_status_dim_2, health_system_status_dim_11, health_system_status_dim_12, health_system_status_dim_13, health_system_status_dim_14,
+                                    health_system_status_dim_15, health_system_status_dim_16, health_system_status_dim_17,
                                     social.dets.dep %>%  dplyr::select(dep, health_population_status_dim_3, health_population_status_dim_4, health_population_status_dim_5, health_population_status_dim_10,
                                                                        health_population_status_dim_11, health_population_status_dim_12, health_population_status_dim_13, health_population_status_dim_14,
-                                                                       health_system_status_dim_3, health_system_status_dim_4, health_system_status_dim_5, health_system_status_dim_6) ) ,
+                                                                       health_system_status_dim_3, health_system_status_dim_4, health_system_status_dim_5, health_system_status_dim_6,health_system_status_dim_7,
+                                                                       health_system_status_dim_8, health_system_status_dim_9)) ,
                               by = c("dep" = "dep") ) %>% 
                    dplyr::select(dep, prov, 
                                  education_dim, demographics_dim, 
@@ -621,7 +744,11 @@ social.dets.pca <- left_join( cbind(social.dets, dynamic_population_dim_1, dynam
                                  health_population_status_dim_15, health_population_status_dim_16, health_population_status_dim_17, health_population_status_dim_18, health_population_status_dim_19,
                                  health_population_status_dim_20, health_population_status_dim_21,
                                  health_system_status_dim_1, health_system_status_dim_2, health_system_status_dim_3, 
-                                 health_system_status_dim_4, health_system_status_dim_5, health_system_status_dim_6)
+                                 health_system_status_dim_4, health_system_status_dim_5, health_system_status_dim_6,
+                                 health_system_status_dim_7, health_system_status_dim_8, health_system_status_dim_9, health_system_status_dim_10,
+                                 health_system_status_dim_11, health_system_status_dim_12, health_system_status_dim_13, health_system_status_dim_14,
+                                 health_system_status_dim_15, health_system_status_dim_16, health_system_status_dim_17, health_system_status_dim_18,
+                                 health_system_status_dim_19, health_system_status_dim_20, health_system_status_dim_21)
                             
 
 saveRDS(social.dets.pca, file.path(output, "social_dets_pca.rds"))
